# animerch

./: README.md  requirements.txt  seed_db.py
app/: database.py  main.py  pyproject.toml  utils.py
app/admin/: routes.py
app/auth/: models.py  routes.py  schemas.py
app/cart/: models.py  routes.py
app/core/: config.py  security.py
app/manga/: routes.py
app/merch/: routes.py
app/orders/: models.py  routes.py
app/products/: models.py  routes.py  schemas.py
app/profile/: routes.py
templates/: add_product.html  cart.html  checkout.html  index.html  layout.html  login.html  merch.html  my_orders.html  order_success.html  product_detail.html  register.html
templates/admin/: add_product.html  dashboard.html
templates/manga/: ebooks.html  landing.html  physical.html
templates/profile/: buyer.html  seller.html
